added particle background after 24 hours of effort

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-tsparticles": "^2.0.6",
+    "tsparticles-slim": "^2.0.6",
     "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
