--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
     "react-tsparticles": "^2.0.6",
-    "tsparticles-slim": "^2.0.6"
+    "tsparticles-slim": "^2.0.6",
+    "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
